force-app/main/default/objects/WhatsApp_Message__c/WhatsApp_Message__c.object-meta.xml
<CustomObject>
    <label>WhatsApp Message</label>
    <nameField>
        <displayFormat>WA-{0000}</displayFormat>
        <label>WhatsApp Message Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>WhatsApp Messages</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>