force-app/main/default/objects/WhatsApp_Message__c/fields/BusinessPhoneNumber__c.field-meta.xml
<CustomField>
    <fullName>BusinessPhoneNumber__c</fullName>
    <label>BusinessPhoneNumber</label>
    <type>Phone</type>
</CustomField>