force-app/main/default/objects/WhatsApp_Message__c/fields/ChatStatus__c.field-meta.xml
<CustomField>
    <fullName>ChatStatus__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Chat Status</label>
    <type>Checkbox</type>
</CustomField>