force-app/main/default/objects/WhatsApp_Message__c/fields/ConversationExpiration__c.field-meta.xml
<CustomField>
    <fullName>ConversationExpiration__c</fullName>
    <label>Conversation Expiration</label>
    <length>255</length>
    <type>Text</type>
</CustomField>