force-app/main/default/objects/WhatsApp_Message__c/fields/ConversationOrigin__c.field-meta.xml
<CustomField>
    <fullName>ConversationOrigin__c</fullName>
    <label>Conversation Origin</label>
    <length>255</length>
    <type>Text</type>
</CustomField>