force-app/main/default/objects/WhatsApp_Message__c/fields/CustomerPhone__c.field-meta.xml
<CustomField>
    <fullName>CustomerPhone__c</fullName>
    <label>CustomerPhone</label>
    <type>Phone</type>
</CustomField>