force-app/main/default/objects/WhatsApp_Message__c/fields/InteractiveDetail__c.field-meta.xml
<CustomField>
    <fullName>InteractiveDetail__c</fullName>
    <label>Interactive Detail</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>