force-app/main/default/objects/WhatsApp_Message__c/fields/MediaAnimated__c.field-meta.xml
<CustomField>
    <fullName>MediaAnimated__c</fullName>
    <label>Media Animated</label>
    <length>255</length>
    <type>Text</type>
</CustomField>