force-app/main/default/objects/WhatsApp_Message__c/fields/MediaId__c.field-meta.xml
<CustomField>
    <fullName>MediaId__c</fullName>
    <label>Media Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>