force-app/main/default/objects/WhatsApp_Message__c/fields/MediaLink__c.field-meta.xml
<CustomField>
    <fullName>MediaLink__c</fullName>
    <label>Media Link</label>
    <length>255</length>
    <type>Text</type>
</CustomField>