force-app/main/default/objects/WhatsApp_Message__c/fields/MediaSHA256__c.field-meta.xml
<CustomField>
    <fullName>MediaSHA256__c</fullName>
    <label>MediaSHA256</label>
    <length>255</length>
    <type>Text</type>
</CustomField>