force-app/main/default/objects/WhatsApp_Message__c/fields/MediaType__c.field-meta.xml
<CustomField>
    <fullName>MediaType__c</fullName>
    <label>Media Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>