force-app/main/default/objects/WhatsApp_Message__c/fields/MessageID__c.field-meta.xml
<CustomField>
    <fullName>MessageID__c</fullName>
    <externalId>true</externalId>
    <label>MessageID</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>