force-app/main/default/objects/WhatsApp_Message__c/fields/MessageSendType__c.field-meta.xml
<CustomField>
    <fullName>MessageSendType__c</fullName>
    <label>Message Send Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Inbound</fullName>
            </value>
            <value>
                <fullName>Outbound</fullName>
            </value>
            <value>
                <fullName>End Chat</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>