force-app/main/default/objects/WhatsApp_Message__c/fields/MessageSentTime__c.field-meta.xml
<CustomField>
    <fullName>MessageSentTime__c</fullName>
    <label>Message Sent Time</label>
    <type>DateTime</type>
</CustomField>