force-app/main/default/objects/WhatsApp_Message__c/fields/MessageStatus__c.field-meta.xml
<CustomField>
    <fullName>MessageStatus__c</fullName>
    <label>Message Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>