force-app/main/default/objects/WhatsApp_Message__c/fields/MessagingSession__c.field-meta.xml
<CustomField>
    <fullName>MessagingSession__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Messaging Session</label>
    <referenceTo>MessagingSession</referenceTo>
    <relationshipLabel>WhatsApp Messages</relationshipLabel>
    <relationshipName>WhatsApp_Messages</relationshipName>
    <type>Lookup</type>
</CustomField>