force-app/main/default/objects/WhatsApp_Message__c/fields/OrderDetail__c.field-meta.xml
<CustomField>
    <fullName>OrderDetail__c</fullName>
    <label>Order Detail</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>