force-app/main/default/objects/WhatsApp_Message__c/fields/OrderNumber__c.field-meta.xml
<CustomField>
    <fullName>OrderNumber__c</fullName>
    <label>Order Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>