force-app/main/default/objects/WhatsApp_Message__c/fields/PhonenumberId__c.field-meta.xml
<CustomField>
    <fullName>PhonenumberId__c</fullName>
    <label>Phone number Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>