force-app/main/default/objects/WhatsApp_Message__c/fields/RemaingTime__c.field-meta.xml
<CustomField>
    <fullName>RemaingTime__c</fullName>
    <formula>( DATETIMEVALUE(&apos;1970-01-01 00:00:00&apos;) + (VALUE(Timestamp__c) / 86400) - NOW()) * 24</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Remaing Time</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>