force-app/main/default/objects/WhatsApp_Message__c/fields/TemplateButtonPayload__c.field-meta.xml
<CustomField>
    <fullName>TemplateButtonPayload__c</fullName>
    <label>Template Button Payload</label>
    <length>255</length>
    <type>Text</type>
</CustomField>