force-app/main/default/objects/WhatsApp_Message__c/fields/TemplateButtonText__c.field-meta.xml
<CustomField>
    <fullName>TemplateButtonText__c</fullName>
    <label>Template Button Text</label>
    <length>255</length>
    <type>Text</type>
</CustomField>