force-app/main/default/objects/WhatsApp_Message__c/fields/TemplateHeaderType__c.field-meta.xml
<CustomField>
    <fullName>TemplateHeaderType__c</fullName>
    <label>Template Header Type</label>
    <length>50</length>
    <type>Text</type>
</CustomField>