force-app/main/default/objects/WhatsApp_Message__c/fields/TemplateHeaderURL__c.field-meta.xml
<CustomField>
    <fullName>TemplateHeaderURL__c</fullName>
    <label>Template Header URL</label>
    <type>Url</type>
</CustomField>