force-app/main/default/objects/WhatsApp_Message__c/fields/TemplateLanguage__c.field-meta.xml
<CustomField>
    <fullName>TemplateLanguage__c</fullName>
    <label>Template Language</label>
    <length>255</length>
    <type>Text</type>
</CustomField>