force-app/main/default/objects/WhatsApp_Message__c/fields/ViewedByAgent__c.field-meta.xml
<CustomField>
    <fullName>ViewedByAgent__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Viewed By Agent</label>
    <type>Checkbox</type>
</CustomField>