force-app/main/default/objects/WhatsApp_Message__c/fields/WhatsApp_Messaging_Session__c.field-meta.xml
<CustomField>
    <fullName>WhatsApp_Messaging_Session__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>WhatsApp Messaging Session</label>
    <referenceTo>WhatsAppMessagingSession__c</referenceTo>
    <relationshipLabel>WhatsApp Messages</relationshipLabel>
    <relationshipName>WhatsApp_Messages</relationshipName>
    <type>Lookup</type>
</CustomField>