force-app/main/default/objects/WhatsApp_Message__c/fields/WhatsappUser__c.field-meta.xml
<CustomField>
    <fullName>WhatsappUser__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Whatsapp User</label>
    <referenceTo>WhatsappUser__c</referenceTo>
    <relationshipLabel>WhatsApp Messages</relationshipLabel>
    <relationshipName>WhatsAppMessages</relationshipName>
    <type>Lookup</type>
</CustomField>