force-app/main/default/objects/WhatsApp_Message__c/listViews/Active_Chats.listView-meta.xml
<ListView>
    <fullName>Active_Chats</fullName>
    <columns>NAME</columns>
    <filterScope>Mine</filterScope>
    <label>Active Chats</label>
</ListView>