force-app/main/default/objects/WhatsApp_Message__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>BusinessPhoneNumber__c</columns>
    <columns>CustomerName__c</columns>
    <columns>CustomerPhone__c</columns>
    <columns>MessageSendType__c</columns>
    <columns>MessageType__c</columns>
    <columns>MessageStatus__c</columns>
    <columns>MessageSentTime__c</columns>
    <columns>ConversationExpiration__c</columns>
    <columns>WhatsApp_Messaging_Session__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>